# img

./: .gitignore  README-Docker.md  deploy.bat  deploy.sh  docker-compose.yml  img.floalz.fr.conf
backend/: .dockerignore  Dockerfile  app.py  deps.py  pyproject.toml  run.bat  run.sh
backend/config/: settings.py
backend/exceptions/: base.py  watermark_errors.py
backend/http_content/: routers.py
backend/http_content/adapters/: media_adapter.py
backend/http_content/routes/: watermark_routes.py
backend/models/: file.py
backend/services/: watermark_service.py
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  angular.json  nginx.conf  package-lock.json  package.json
frontend/src/: custom-theme.scss  index.html  styles.css
frontend/src/app/: app.config.ts  app.routes.ts  app.ts  http-error-interceptor.ts
frontend/src/app/core/services/: http-client.service.ts
frontend/src/app/features/errors/error/: error.css  error.html  error.ts
frontend/src/app/features/errors/error-415/: error-415.css  error-415.html  error-415.ts
frontend/src/app/features/errors/error-422/: error-422.css  error-422.html  error-422.ts
frontend/src/app/features/watermark/: watermark.service.ts
frontend/src/app/features/watermark/components/page/: page.css  (+2 more)
frontend/src/app/features/watermark/download-zone/: download-zone.css  download-zone.html  download-zone.ts
frontend/src/app/features/watermark/models/: watermark.request.ts
frontend/src/environments/: environment.development.ts  environment.prod.ts
nginx/: nginx.conf
nginx/conf.d/: img.floalz.fr.conf
(+3 files in other folders)
